<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".LoginScreen">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/login_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        app:labelText="@string/login_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:primaryColor="@color/colorAccent"
        app:secondaryColor="@color/colorGray">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="11"
            app:singleLine="true"/>

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/password_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:endIcon="@drawable/hide_password"
        app:labelText="@string/password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_box"
        app:primaryColor="@color/colorAccent"
        app:secondaryColor="@color/colorGray">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:imeOptions="actionNext"
            android:inputType="numberPassword"
            app:singleLine="true" />

    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:background="@color/colorAccent"
        android:text="@string/login_button_text"
        android:textColor="@color/colorButtonText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_below="@id/login_button"
        android:indeterminateTint="@color/colorButtonText"
        android:translationZ="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/login_button" />


</android.support.constraint.ConstraintLayout>