<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.main.AddMemeActivity">

    <ImageButton
        android:id="@+id/attach_button"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="16dp"
        android:background="@color/colorBackground2"
        android:src="@drawable/ic_attach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/title_hint"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@id/text_et"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/text_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:hint="@string/text_hint"
                android:inputType="textMultiLine"
                android:isScrollContainer="true"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_et"
                android:importantForAutofill="no" />

            <ImageView
                android:id="@+id/attached_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_et"
                tools:ignore="ContentDescription" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dettach_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="56dp"
                android:alpha="0.9"
                android:src="@drawable/ic_close"
                app:civ_circle_background_color="@color/colorBackground2"
                app:layout_constraintRight_toRightOf="@+id/attached_image_view"
                app:layout_constraintTop_toTopOf="@id/attached_image_view" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="21dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/create_button_text"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="21dp"
            android:background="@color/colorBackground"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />
    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>